[gd_scene load_steps=3 format=3 uid="uid://dg4rdb380cayc"]

[ext_resource type="Script" uid="uid://3osb7ar0023i" path="res://scripts/desktop_terminal.gd" id="1_mjtlb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mjtlb"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="DesktopTerminal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjtlb")
metadata/_edit_lock_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.101960786, 0.101960786, 0.18039216, 1)

[node name="JobListBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 310.0
offset_bottom = 470.0
color = Color(0.08627451, 0.12941177, 0.24313726, 1)

[node name="NoJobsLabel" type="Label" parent="JobListBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -11.5
offset_right = 68.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No jobs available!"

[node name="ScrollContainer" type="ScrollContainer" parent="JobListBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_right = 130.0
offset_bottom = 407.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mjtlb")
horizontal_scroll_mode = 0

[node name="JobListContainer" type="VBoxContainer" parent="JobListBackground/ScrollContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AvailableJobsHeader" type="Label" parent="JobListBackground/ScrollContainer/JobListContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 1, 0.25490198, 1)
theme_override_font_sizes/font_size = 14
text = "AVAILABLE JOBS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator" type="HSeparator" parent="JobListBackground/ScrollContainer/JobListContainer"]
layout_mode = 2

[node name="AvailableJobsList" type="VBoxContainer" parent="JobListBackground/ScrollContainer/JobListContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.8
theme_override_constants/separation = 5
alignment = 1

[node name="ActiveJobsHeader" type="Label" parent="JobListBackground/ScrollContainer/JobListContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.25490198, 1)
theme_override_font_sizes/font_size = 14
text = "ACTIVE JOBS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="JobListBackground/ScrollContainer/JobListContainer"]
layout_mode = 2

[node name="ActiveJobsList" type="VBoxContainer" parent="JobListBackground/ScrollContainer/JobListContainer"]
layout_mode = 2
alignment = 1

[node name="DetailsBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 50.0
offset_right = 630.0
offset_bottom = 470.0
color = Color(0.08627451, 0.12941177, 0.24313726, 1)

[node name="JobDetails" type="VBoxContainer" parent="DetailsBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -200.0
offset_right = 140.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="CustomerLabel" type="Label" parent="DetailsBackground/JobDetails"]
layout_mode = 2
text = "Customer: "

[node name="ShirtColorLabel" type="Label" parent="DetailsBackground/JobDetails"]
layout_mode = 2
text = "Shirt Color: "

[node name="NumShirtsLabel" type="Label" parent="DetailsBackground/JobDetails"]
layout_mode = 2
text = "Quantity: "

[node name="ColorsLabel" type="Label" parent="DetailsBackground/JobDetails"]
layout_mode = 2
text = "Print Colors: "

[node name="LocationLabel" type="Label" parent="DetailsBackground/JobDetails"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
text = "Print Location: "
autowrap_mode = 3

[node name="DueDateLabel" type="Label" parent="DetailsBackground/JobDetails"]
layout_mode = 2
text = "Due Date: "

[node name="PaymentLabel" type="Label" parent="DetailsBackground/JobDetails"]
layout_mode = 2
text = "Payment: $0"

[node name="SelectJobButton" type="Button" parent="DetailsBackground/JobDetails"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Accept  Job"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -213.0
offset_top = 10.0
offset_right = 213.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0.25490198, 1)
theme_override_font_sizes/font_size = 20
text = "ORDER MANAGEMENT"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -51.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Close"
